ensures gallery box wraps around any videos inside

--- a/public_html/css/videoPlayer.css
+++ b/public_html/css/videoPlayer.css
@@ -16,6 +16,7 @@ body { background-color: #222; margin: 20px; }
 a.videoLink { 
 	display: block;
 	margin: 0px 15px 15px 0px;
+	padding: 0px;
 	width: 200px;
 	height: 115px;
 	float: left;
